[package]
name = "huer"
version = "0.0.1"
edition = "2021"
authors = [
    "Erik Tesar <erik@erik-tesar.com>"
]
license = "MIT"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2.2", features = ["serde"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.8", features = ["serde"] }
tokio = { version = "1.17", features = ["macros", "time"]}
[dev-dependencies]
tokio-test = "0.4"
[features]
default = [ "discover_mdns", "discover_remote"]
# If enabled, Multicast DNS will be used to discover the bridge. This is NOT 
# supported in browsers.
discover_mdns = []
# If enabled, the hue discovery api will be used. This makes a request to an 
# endpoint on the internet
discover_remote = []
